--- a/Sass/components/_enquiry.scss
+++ b/Sass/components/_enquiry.scss
@@ -86,13 +86,18 @@
   -ms-flex-align: center;
   align-items: center;
   margin-left: auto;
+  @include responsive.respond(bigDesktop) {
+    gap: 11rem;
+  }
+  @include responsive.respond(desktop) {
+    gap: 3rem;
+  }
 }
 .enquary-image-text {
   font-size: 5rem;
   font-family: "Inter", serif;
   font-weight: 500;
   line-height: 1;
-  font-size: 600%;
   color: #024060;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -106,8 +111,23 @@
   justify-content: space-between;
   gap: 3rem;
 
+  article {
+    width: 100%;
+    div {
+      @include responsive.respond(desktop) {
+        width: 140%;
+      }
+      @include responsive.respond(bigDesktop) {
+        width: 140%;
+      }
+    }
+  }
+
   @include responsive.respond(desktop) {
-    font-size: 4rem;
+    font-size: 3.8rem;
+  }
+  @include responsive.respond(bigDesktop) {
+    font-size: 4.5rem;
   }
 }
 
@@ -139,14 +159,14 @@
   align-items: center;
   gap: 10px;
 
-  &:has(input[name="country"], input[name="education"]) {
-    input {
-      width: 50%;
-      -webkit-box-flex: 1;
-      -ms-flex: 1 1 0px;
-      flex: 1 1 0;
-    }
-  }
+  // &:has(input[name="country"], input[name="education"]) {
+  //   input {
+  //     width: 40%;
+  //     -webkit-box-flex: 1;
+  //     -ms-flex: 1 1 0px;
+  //     flex: 1 1 0;
+  //   }
+  // }
 }
 
 .enquary-form-row input,
